assets/css/style.css
/* ... */
.card__button:hover,
.card__button:active {
  background-color: var(--color-green-1);
  border: 1px solid var(--color-green-1);
}

.card:hover .card__button {
  transform: translateY(-1em);
  opacity: 1;
  visibility: visible;
}

.card__button--small {
  padding: 1em 1.1em;
}

.card__button--big {
  padding: 0.7em 0.4em;
}

.card__text {
  display: flex;
  flex-direction: column;
  flex: 1;
}

.card__title {
  margin-top: 1em;
  flex: 1;
}

.card__description {
  max-width: 18ch;
}

/* ############ 3.3 Sections ############ */
.section--top {
  display: flex;
  flex-direction: column-reverse;
}

.section__title {
  text-transform: uppercase;
  font-weight: 500;
  position: relative;
  width: fit-content;
  margin-top: calc(3.5 * var(--font-size-base));
}

.section__title::after {
  content: "";
  position: absolute;
  width: 33%;
  height: 2px;
  bottom: -0.35em;
  left: 0;
  background-color: var(--color-green-1);
  transition: transform 0.2s ease-in-out;
}

.section:hover .section__title {
  color: var(--color-green-1);
}

.section:hover .section__title::after {
  transform: translateX(100%);
}

.section__content {
  gap: 0 0.5em;
  list-style-type: initial;
  list-style-position: inside;
  margin-top: calc(2 * var(--font-size-base));
}

.subsection__title {
  font-size: calc(1.5 * var(--font-size-base));
  font-weight: 700;
}

.section__tag {
  text-transform: uppercase;
  color: var(--color-grey-1);
  font-weight: 500;
}

/* ############ 4. Header ############ */
.banner__title {
  font-size: clamp(
    calc(2.5 * var(--font-size-base)),
    5vw,
    calc(4.5 * var(--font-size-base))
  );
  margin-top: 0.25em;
}

.banner__job-title {
  font-size: clamp(
    calc(1 * var(--font-size-base)),
    3vw,
    calc(1.5 * var(--font-size-base))
  );
  margin-top: 0.15em;
}

.nav {
  display: flex;
  align-items: center;
  gap: 1em;
  flex-wrap: wrap;
  margin-top: 1.25em;
}

.nav__button {
  cursor: pointer;
}

#toggler {
  width: 0px;
  height: 0px;
  opacity: 0;
  visibility: hidden;
  position: absolute;
  top: -100px;
  left: -100px;
}

.nav__items {
  display: flex;
  flex-direction: column;
  gap: 1em;
  width: 100%;
  height: 0;
  opacity: 0;
  visibility: hidden;
  overflow: hidden;
  transition: all 0.5s ease-in-out;
}

#toggler:checked + .nav__items {
  height: 20.48rem;
  opacity: 1;
  visibility: visible;
}

/* ############ 5. Educación ############ */
#education .section__content {
  list-style: none;
  display: flex;
  flex-direction: column;
  gap: 0.5em;
  max-width: fit-content;
}

.education__certificate-link {
  width: 100%;
}

.education__degree {
  color: var(--color-white-2);
  font-weight: 500;
}

.education__description {
  flex-grow: 1;
}

.education__certificate-icon {
  font-size: 2rem;
  color: var(--color-grey-1);
  margin-left: 0.25em;
}

.card:hover .education__certificate-icon,
.card:active .education__certificate-icon {
  color: var(--color-green-1);
}

/* ############ 6. Experiencia ############ */
#experiences .section__content {
  list-style: none;
  display: flex;
  flex-direction: column;
  gap: calc(1.5 * var(--font-size-base));
}

.experience__job-title {
  font-size: calc(1.5 * var(--font-size-base));
  font-weight: 400;
}

.experience__tasks {
  list-style-position: inside;
  margin-top: calc(1 * var(--font-size-base));
  display: flex;
  flex-direction: column;
  gap: 0.5em;
}

.experience__task:hover i {
  color: var(--color-green-1);
}

/* ############ 7. Tecnologías ############ */
.technologies .section__content {
  display: flex;
  flex-wrap: wrap;
}

.technologies__first-li {
  list-style: none;
}

/* ############ 8. Contáctame ############ */
.contact-me .section__content {
  list-style: none;
  display: flex;
  flex-direction: column;
  gap: var(--font-size-base);
}

.social__link {
  display: flex;
  align-items: center;
  gap: 0.5em;
}

.social__icon {
  font-size: 2em;
  transition: color 0.2ms ease-in-out;
}

.social:hover .social__icon {
  color: var(--color-green-1);
}

/* ############ 9. Proyectos ############ */
.projects .section__content {
  list-style: none;
  display: flex;
  gap: var(--font-size-base);
  overflow-x: scroll;
}

/* ############ 10. Referencias ############ */
.references .section__content {
  list-style: none;
  display: flex;
  gap: var(--font-size-base);
}

/* ############ 11. Footer ############ */
.footer {
  text-align: center;
  margin-top: calc(3.5 * var(--font-size-base));
  font-size: calc(1.25 * var(--font-size-base));
  position: relative;
}

.footer__attribution {
  display: block;
}

/* ############ 12. PopUps ############ */
.popup {
  position: fixed;
  background-color: rgba(0, 0, 0, 0.7);
  min-height: 100vh;
  top: 0;
  left: 0;
  width: 100%;
}

.popup__content {
  padding: calc(1.5 * var(--font-size-base));
  padding-top: 0;
  position: absolute;
  width: 90%;
  max-width: var(--full-width);
  min-height: 70vh;
  max-height: 90vh;

  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%) scale(0.8);
  background-color: var(--color-grey-2);
  border-radius: 0.75em;
  opacity: 0;
  visibility: hidden;
  transition: all 0.2s ease-in-out;

  display: grid;
  grid-template-columns: 1fr;
  grid-template-rows: auto auto 1fr;
  grid-template-areas:
    "header"
    "info"
    "preview";
  gap: calc(1.5 * var(--font-size-base));
}

#popup-foro:target .popup__content,
#popup-comidas:target .popup__content,
#popup-cuppon:target .popup__content,
#popup-convertidor:target .popup__content,
#popup-lemon:target .popup__content,
#popup-parfum:target .popup__content {
  opacity: 1;
  visibility: visible;
  transform: translate(-50%, -50%) scale(1);
}

#popup-foro,
#popup-comidas,
#popup-cuppon,
#popup-convertidor,
#popup-lemon,
#popup-parfum {
  opacity: 0;
  visibility: hidden;
  transition: all 0.2s ease-in-out;
}

#popup-foro:target,
#popup-comidas:target,
#popup-cuppon:target,
#popup-convertidor:target,
#popup-lemon:target,
#popup-parfum:target {
  opacity: 1;
  visibility: visible;
}
/* ... */

